--- a/app/views/patients/_admin_desktop_visits.html.erb
+++ b/app/views/patients/_admin_desktop_visits.html.erb
@@ -11,6 +11,7 @@
 	    <th>Doctor</th>
 	    <th class="tbl_md text-center">Diag.</th>
 	    <th>Services</th>
+	    <th>Meds Renewed?</th>
 	    <th class="tbl_md">Status</th>
 	  </tr>
 	  <tbody>
