--- a/app/views/patients/lookup.html.erb
+++ b/app/views/patients/lookup.html.erb
@@ -1,21 +1,1 @@
-<%= simple_form_for :patient do |f| %>
-<%# form_with  do |f| %>
-  <%= f.error_notification %>
-
-<div class="row">
-  <div class="col-md-3 col-xs-12">
-     <%= f.input :ohip4, label: "Last 4 digits of your health card", hint: 'Required'%>
-  </div>
-  
-  <div class="col-md-3 col-xs-12">
-  <%= f.input :dob, html5: true, label: "Your Date of birth", placeholder: 'dd/mm/yy' %>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-6 col-xs-12">
-  <%= f.button :submit, 'Look Me Up', class: "btn btn-lg btn-primary" %>
-  </div>
-</div>
-  
-<% end %>
+I am patents/lookup.html.erb
