--- a/app/views/static_pages/_desktop_lookup.html.erb
+++ b/app/views/static_pages/_desktop_lookup.html.erb
@@ -1,31 +1,37 @@
 <div class="p-3">
-<%= simple_form_for :user, url: users_lookup_path do |f| %>
+<%= simple_form_for :patient, url: patients_lookup_path do |f| %>
   <%= f.error_notification %>
 
-  <div class='ml-2'>Patient Registration</div>
+  <div class='ml-2'>Patient Lookup</div>
 <small>
 <div class="panel panel-default ml-2">
 <div class="panel-body">
 <div class="row">
-  <div class="col-md-4 ml-2 col-xs-12">
-    <%= f.input :dob, as: :date, html5: true, label: 'Date of birth', placeholder: 'dd/mm/yy' %>
-  </div>
-  <div class="col-md-3 col-xs-12">
-     <%= f.input :ohip4, label: 'Health Card#', placeholder: 'last 4 digits' %>
+  <div class="col-md-3">
+
+  <b>Your Ontario Health Card#</b>
+  <div class="input-group">
+    <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+    <%= f.input :ohip_num, label: false, placeholder: 'XXXXXXXXXXX AA' %>
   </div>
 
-  <div class="col-md-2 col-xs-12">
-  <%= f.label '' %>
-  <div style="width:55px;">
-  <%= f.button :submit, 'Go', class: "btn btn-primary btn-lg" %>
+  </div>
+  <div class="col-md-2">
+  <%= f.label '', class: 'pt-2' %>
+  <div style="width:100px;display:none" id="register_button">
+  <%# button_to 'Register', patients_lookup_path, remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window', class:"btn btn-primary", method: 'get' %>
+  <%= button_to 'Register', patients_lookup_path, class:"btn btn-primary", method: 'get' %>
   </div>
   </div>
-  <div class="col-md-2 ">
-    <div class="text-muted" style="font-size: 1em; color: red; text-transform: uppercase;"><b>Look up My patient Record </b> 
-    <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
+  <div class="col-md-4 pt-3">
+    <div class="text-muted" style="font-size: 1.1em;">
+      <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
+      If you have been to our clinic we will lookup your patient profile and your visit history. Once registered, you will have access to your record.
     </div>
   </div>
 </div>
+
+<div class=" col-md-12 text-success" id="results"></div>
 
 </div>
 </div>
@@ -33,3 +39,20 @@
 
 <% end %>
 </div>
+
+<script>
+$(document).ready(function() {
+
+var ohip_num = document.getElementById("patient_ohip_num");
+$(ohip_num).keyup(function () {
+  if ($(this).val().length > 11 ) {
+     var val = $(this).val().replace(/\W/g,'');
+     get_patient( val );
+  }
+});
+
+});
+
+</script>
+
+
