--- a/app/views/static_pages/_mobile_lookup.html.erb
+++ b/app/views/static_pages/_mobile_lookup.html.erb
@@ -1,25 +1,31 @@
 <div class="p-3">
-<%= simple_form_for :user, url: users_lookup_path do |f| %>
+  <%= simple_form_for :patient, url: patients_lookup_path do |f| %>
   <%= f.error_notification %>
 
-<div class='ml-2'><b>Patient Registration</b></div>
 <div class="panel panel-default ml-2">
 <div class="panel-body">
-<div class="row">
-  <div class="col-md-2 col-md-offset-1 col-xs-6">
-    <%= f.input :dob, as: :date, html5: true, label: 'Date of birth', placeholder: 'dd/mm/yy' %>
+  <%= f.input :ohip_num, label: 'Your Ontario Health Card#', placeholder: 'XXXXXXXXXXX AA', input_html: {style: "height: 45px !important; font-size: 1.3em; font-weight:bold; "} %>
+  <div id="register_button" style="display:none">
+    <%= f.button :submit, 'Register', class: "btn btn-primary" %>
   </div>
-  <div class="col-md-2 col-xs-6">
-     <%= f.input :ohip4, label: 'Health Card#', placeholder: 'last 4 digits' %>
-  </div>
-
-  <div class="col-md-3 col-xs-12 pt-4">
-  <%= f.button :submit, "Look up My Record" , class: "btn-primary btn-lg"  %>
-  </div>
-</div>
-
+  <div class="text-success pt-3" id="results"></div>
 </div>
 </div>
 
 <% end %>
 </div>
+
+<script>
+$(document).ready(function() {
+var ohip_num = document.getElementById("patient_ohip_num");
+$(ohip_num).keyup(function () {
+  if ($(this).val().length > 11 ) {
+     var val = $(this).val().replace(/\W/g,'');
+     get_patient( val );
+  }
+});
+
+});
+</script>
+
+
