front page updated

--- a/app/views/patients/_doctor_desktop_visits.html.erb
+++ b/app/views/patients/_doctor_desktop_visits.html.erb
@@ -11,7 +11,7 @@
 	    <th>Doctor</th>
 	    <th class="tbl_md">Diag.</th>
 	    <th>Services</th>
-	    <th>Meds Renewed?</th>
+	    <th class="tbl_sm">Meds Renewal?</th>
 	    <th class="tbl_md">Status</th>
 	  </tr>
 	  <tbody>
