--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -3,17 +3,18 @@
 <div class="row">  
   <div class="col-md-5">
     <img src='/images/clinic.jpg' width="480"></img>
-    <div id="address" class="pt-3">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (905) 561-9255 
-      <br>During off hours please <%= link_to "request callback", new_user_session_path %>. In case of any registration problems, please
-      <a href="mailto:dosta@me.com?subject=Patient Inquiry">send me an email</a>
+    <div id="address" class="pt-3">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (905) 561-9255 </div>
+    <div class="p-3">
+      During off hours please or to renew your prescription <%= link_to "request callback from doctor", new_user_session_path %>. In case of any registration problems, please
+      <a href="mailto:dosta@me.com?subject=Patient Inquiry">send me an email</a> or use chat button bottom right.
     </div>
 
     <p>
-    <div class="ml-3 pt-3" >
-    <div class="panel panel-info p-2 news-panel-body">
+    <div class="ml-3" >
+    <div class="panel panel-info news-panel-body">
       <div class="panel-body "><p align="justify"> 
        This is current schedule updated daily. Please <%= link_to "book your appointment online", new_user_session_path %> or call the clinic  during business hours: <b> (905) 561-9255 </b>.
-       For telemedicine visits, our goal is to call you back within an hour of your online request, provided it was made between 8am and 8pm.
+       For telemedicine visits, our goal is to call you back within an hour of your online request, provided it was made between 8am and 8pm Monday to Friday, or between 9am and 2pm on weekends.
   <%= render "schedules/full_schedule" %>
         </p>
     </div>
@@ -27,15 +28,15 @@
 <font size=3>
   <p><font size=6>C</font>linic is now open 7 days a week. Please check current schedule below. Patients who registered online for virtual appointment are given priority. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. </p> 
   <div class="pt-3"></div>
-  <p> <font size=6>P</font>rescriptions can now be renewed over the phone. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Please register below and request callback from doctor.</p>
+  <p> <font size=6>P</font>rescriptions can now be renewed over the phone. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Please register below and request callback from doctor, or click button below if you are already registered . </p>
 
 <div class="pt-3">
   <%= render "#{device_type}_lookup" %>
 </div>
 
-<p> If you have registered already, go ahead and make your telephone appointment. Just click the button below, log in and describe your symptoms. Doctor on duty (see the schedule) will call you back.  </p>
+<p> If you have registered already, go ahead and make your telephone appointment. Just click the button below, log in and describe your symptoms. Doctor on duty (see the schedule) will call you back to discuss your issue or renew your medications.  </p>
 
-<div align="center" class="pt-4"><%= link_to 'Request Doctor Callback', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
+<div align="center" class="pt-4"><%= link_to 'Yes, I would like doctor to call me back', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
 <div class="pt-4">
   <i>
