--- a/app/views/static_pages/_desktop_lookup.html.erb
+++ b/app/views/static_pages/_desktop_lookup.html.erb
@@ -2,27 +2,26 @@
 <%= simple_form_for :patient, url: patients_lookup_path do |f| %>
   <%= f.error_notification %>
 
-  <div class='ml-2'>Patient Lookup</div>
 <small>
-<div class="panel panel-default ml-2">
-<div class="panel-body">
+<h5 class='card-title ml-2'>Patient Lookup</h5>
+<div class="card bg-light mb-3">
+<div class="card-body">
 <div class="row">
-  <div class="col-md-3">
-
-  <b>Your Ontario Health Card#</b>
+  <div class="col-md-4">
+    <img src="/images/on_32_tr.png"><b> Your Ontario Health Card#</b>
   <div class="input-group">
     <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
     <%= f.input :ohip_num, label: false, placeholder: 'XXXXXXXXXXX AA' %>
   </div>
-
   </div>
+
   <div class="col-md-2">
-  <%= f.label '', class: 'pt-2' %>
-  <div style="width:100px;display:none" id="register_button">
+  <%= f.label '', class: 'pt-4' %>
+  <div style="width:100px; display:none" id="register_button">
   <%# button_to 'Register', patients_lookup_path, remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window', class:"btn btn-primary", method: 'get' %>
   <%= button_to 'Register', patients_lookup_path, class:"btn btn-primary", method: 'get' %>
   </div>
-  <div style="width:100px;display:none" id="login_button">
+  <div style="width:100px; display:none" id="login_button">
   <%= button_to 'Log In', new_user_session_path, class:"btn btn-primary", method: 'get' %>
   </div>
 
@@ -30,14 +29,18 @@
   <div class="col-md-4 pt-3">
     <div class="text-muted" style="font-size: 1.1em;">
       <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
-      If you have been to our clinic we will lookup your patient profile and your visit history. Once registered, you will have access to your record.
+      If you have been to our clinic we will look up your patient profile and your visit history. Once registered, you will have access to your record and will be able to book a visit.
     </div>
   </div>
 </div>
 
-<div class=" col-md-12 text-success" id="results"></div>
+<span class="text-success" id="results"></span>
 
+<div style="float:right; margin-right: 5px;" >
+  <img src="/images/on_logo1_tr.png" width='90px' >
 </div>
+
+</div> 
 </div>
 </small>
 
