document bug fixes; patients can see some documents now

--- a/app/views/patients/_admin_form.html.erb
+++ b/app/views/patients/_admin_form.html.erb
@@ -1,5 +1,7 @@
 <%= simple_form_for (@patient) do |f| %>
   <%= f.error_notification %>
+  <%= render 'shared/error_messages', object: f.object %>
+
 <!-- Row 1 -->
 <div class="row">
   <div class="col-sm-3">
