--- a/app/views/patients/_admin_mobile_visits.html.erb
+++ b/app/views/patients/_admin_mobile_visits.html.erb
@@ -9,6 +9,7 @@
 	    <th class="tbl_md text-center">Type</th>
 	    <th class="tbl_md text-center">Diag.</th>
 	    <th>Services</th>
+	    <th class="tbl_sm">Meds Renewal?</th>
 	    <th>Status</th>
 	  </tr>
 	  <tbody>
