--- a/app/views/patients/_invoices.html.erb
+++ b/app/views/patients/_invoices.html.erb
@@ -10,7 +10,11 @@
           <td> <%= i.date %> </td>
           <td> <%= sprintf("$%.2f",i.amount) %> </td>
           <td> <%= i.paid_str %> </td>
-          <td> <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_invoice_path(i), remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get'  %> </td>
+          <% if current_user.patient? || current_user.doctor? %>
+            <td></td>
+          <% else %>
+            <td> <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_invoice_path(i), remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get'  %> </td>
+          <% end %>
         </tr>
         <% end %>
     </table>
