--- a/app/views/patients/_medications.html.erb
+++ b/app/views/patients/_medications.html.erb
@@ -13,9 +13,14 @@
                <td> <%= med.strength %> </td>
                <td> <%= med.dose %> </td>
                <td> <%= med.freq %> </td>
-	       <td> <%= f.check_box :active, label: false, onchange: "this.form.submit();" %></td> 
-               <td> <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_medication_path(@patient,med), remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get', onclick: "set_lg_modal()"   %> </td>
-               <td><%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, patient_medication_path(@patient,med), method: :delete, data: { confirm: "Are you sure you want to delete #{med.name}?" } %></td>
+               <% if current_user.patient? %>
+                 <td> <%= med.active? ? 'Yes' :'No' %></td>
+                 <td colspan=2></td>
+               <% else %>
+	         <td> <%= f.check_box :active, label: false, onchange: "this.form.submit();" %></td> 
+                 <td> <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_medication_path(@patient,med), remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get', onclick: "set_lg_modal()"   %> </td>
+                 <td><%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, patient_medication_path(@patient,med), method: :delete, data: { confirm: "Are you sure you want to delete #{med.name}?" } %></td>
+               <% end %>
             </tr>
             <% end %>
           <% end %>
