--- a/app/views/patients/_patient_mobile_visits.html.erb
+++ b/app/views/patients/_patient_mobile_visits.html.erb
@@ -8,6 +8,7 @@
 	    <th>Date</th>
             <th>Doctor</th>
 	    <th>Diagnosis</th>
+	    <th class="tbl_sm">Meds Renewal?</th>
             <th class="text-center">Edit</th>
 	    <th class="text-center">Cancel</th>
 	  </tr>
