--- a/app/views/visits/_doctor_mobile_visit.html.erb
+++ b/app/views/visits/_doctor_mobile_visit.html.erb
@@ -4,6 +4,7 @@
   <td><%= visit.doctor.lname %></td>
   <td><%= visit.diag_scode %></td>
   <td><%= visit.proc_codes %></td>
+  <td><%= visit.meds_renewed_str %></td>
   <td><%= visit.status_str %></td>
 </tr>
 
