--- a/app/views/patients/_doctor_mobile_visits.html.erb
+++ b/app/views/patients/_doctor_mobile_visits.html.erb
@@ -10,6 +10,7 @@
 	    <th>Doctor</th>
 	    <th class="tbl_md">Diag.</th>
 	    <th>Services</th>
+	    <th class="tbl_sm">Meds Renewal?</th>
 	    <th class="tbl_md">Status</th>
 	  </tr>
 	  <tbody>
