--- a/app/views/patients/_patient_form.html.erb
+++ b/app/views/patients/_patient_form.html.erb
@@ -3,7 +3,7 @@
 
 <%= simple_form_for (@patient) do |f| %>
   <%= f.error_notification %>
-  <%# render 'shared/error_messages', object: f.object %>
+  <%= render 'shared/error_messages', object: f.object %>
 
   <%= f.hidden_field :lname %>
   <%= f.hidden_field :fname %>
