--- a/app/views/patients/_patient_show.html.erb
+++ b/app/views/patients/_patient_show.html.erb
@@ -13,7 +13,6 @@
 <b>Phone:</b> <%= num_to_phone(@patient.phone) if @patient.phone.present? %>
 <b>Address:</b> <%= @patient.addr_full if @patient.addr.present? %> 
 <b>Allergies:</b> <%= @patient.allergies if @patient.allergies.present? %>
-<b>Medications:</b> <%= @patient.med_list.join("\n     ")  if @patient.med_list %>
 <% if @patient.pharmacy.present? || @patient.pharm_phone.present? %>
 <b>Pharmacy:</b> <%= @patient.pharmacy if @patient.pharmacy %>  <%= " ph: #{@patient.pharm_phone}" if  @patient.pharm_phone %>
 <% end %>
@@ -22,12 +21,12 @@
 <% end %>
 </pre>
 	 
-&nbsp; <%# render("medications", remote: remote) if @patient.medications.any? %>
+&nbsp; <%= render("medications", remote: remote) if @patient.medications.any? %>
 &nbsp; <%# render("prescriptions", remote: remote) if @patient.prescriptions.any? %>
-&nbsp; <%# render("invoices", remote: remote) if @patient.invoices.any? %>
-&nbsp; <%# render("letters", remote: remote) if @patient.letters.any? %>
-&nbsp; <%# render("referrals", remote: remote) if @patient.referrals.any? %>
-&nbsp; <%# render("patient_docs", remote: remote) if @patient.patient_docs.any? %>
+&nbsp; <%= render("invoices", remote: remote) if @patient.invoices.any? %>
+&nbsp; <%= render("letters", remote: remote) if @patient.letters.any? %>
+&nbsp; <%= render("referrals", remote: remote) if @patient.referrals.any? %>
+&nbsp; <%= render("patient_docs", remote: remote) if @patient.patient_docs.any? %>
 
 <font size=3>
 <% if @patient.visits.count.zero? %>
