--- a/app/views/visits/_admin_mobile_visit.html.erb
+++ b/app/views/visits/_admin_mobile_visit.html.erb
@@ -3,6 +3,7 @@
   <td class="text-center"><%= visit.pat_type %></td>
   <td class="text-center"><%= visit.diag_scode %></td>
   <td><%= visit.proc_codes %></td>
+  <td><%= visit.meds_renewed_str %></td>
   <td><%= visit.status_str %></td>
 </tr>
 
