--- a/app/views/visits/_admin_form.html.erb
+++ b/app/views/visits/_admin_form.html.erb
@@ -142,6 +142,12 @@
 
 <div class="row">
   <div class="col-sm-12"> 
+    <%= f.input :meds_renewed, as: :boolean, label:'Medications renewed',  input_html: {style:'width: 40px;'} %>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-12"> 
     <%= f.label 'Add Documents (pdf/jpg/png/txt)' %>
     <%= f.file_field :document, multiple: true, hint: 'Optional'  %>
   </div>
