--- a/app/views/visits/_patient_form.html.erb
+++ b/app/views/visits/_patient_form.html.erb
@@ -44,7 +44,7 @@
 </div>
 
 <div class="pt-2 checkbox-list">
-    <%= f.input :meds_renewed, as: :boolean, label:'I would like to renew my medications', checked_value: true, unchecked_value: false, input_html: {style:'width: 40px;'} %>
+    <%= f.input :meds_renewed, as: :boolean, label:'I would like to renew my medications', input_html: {style:'width: 40px;'} %>
 </div>
 
 <% if @visit.documents.present? %>
