front page update

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -277,9 +277,9 @@ td.hlight {
 }
 
 #address {
-  font-size: 1em;
-  font-weight: bold;
-  margin-left: 20px;  
+  font-size: 1.5em;
+//  font-weight: bold;
+  margin-left: 15px;  
 }
 
 .hdr-text {
