--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">  
   <div class="col-md-5">
-    <img src='/images/clinic.jpg' width="480"></img>
+    <img src='/images/clinic.jpg' width="490" style="margin-left: 20px"</img>
     <div id="address" class="pt-3">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (905) 561-9255 </div>
     <div class="p-3">
       During off hours please or to renew your prescription <%= link_to "request callback from doctor", new_user_session_path %>. In case of any registration problems, please
@@ -28,7 +28,7 @@
 <font size=3>
   <p><font size=6>C</font>linic is now open 7 days a week. Please check current schedule below. Patients who registered online for virtual appointment are given priority. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. </p> 
   <div class="pt-3"></div>
-  <p> <font size=6>P</font>rescriptions can now be renewed over the phone. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Please register below and request callback from doctor, or click button below if you are already registered . </p>
+  <p> <font size=6>P</font>rescriptions can now be renewed over the phone. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Please register below and request callback from doctor, or click button below if you are already registered. TB and Driving tests are available. </p>
 
 <div class="pt-3">
   <%= render "#{device_type}_lookup" %>
@@ -46,7 +46,7 @@
 
 <div class="pt-5"><i class="glyphicon glyphicon-exclamation-sign mr-2"></i><b>If you have COVID-19 symptoms, please do not come to the clinic. Register online or call the numbers provided. </b></div> 
 
-<div class="pt-5"> Starting July 17 all visiting patients are required to wear mask </div>
+<div class="pt-5"> Starting July 17 all visiting patients are required to wear a mask </div>
 
 </div>
 </div>
@@ -55,15 +55,12 @@
 <p class="pt-3">Don’t have a health card? We still can help. Please call the clinic directly during business hours. </p>
 
 <p>
-Covid-19 is here and it’s not a regular flu. This virus is much more contagious and much more deadly, especially for older people with health conditions.  There’s no cure and no vaccine at this point. So please treat the situation seriously and take all measures to keep yourself safe.
-If you have any or all of these symptoms: fever, coughing, weakness, sweating, muscle pain, do not go to see a doctor, this is a sure way to spread the infection!  Please stay at home and call a doctor. You can register and make a telemedicine appointment with dr. Ostapenko using the button above.
+Covid-19 is still here. This virus is dangerous, especially for older people with health conditions. 
+If you have any or all of these symptoms: fever, coughing, weakness, sweating, muscle pain, do not come to the clinic, this is a sure way to spread the infection!  Please stay at home and call us. You can register and make a telemedicine appointment with the doctor working at the clinic using the button above.
 </p>
 
 <p>
-<b>Mask or no mask?</b> Surgical masks in general, but especially N95 (US) or FFP3 (Europe) help to prevent the spread of the disease. If you have Covid-19 symptoms, it’s recommended to wear a mask in public.
-</p>
-<p>
-<b>Think you might have it?</b> <a href="https://covid-19.ontario.ca/self-assessment/#q1" target="_new">Here is official Ontario quick self-assessment page</a>
+<b>Think you might have Covid?</b> <a href="https://covid-19.ontario.ca/self-assessment/#q1" target="_new">Here is official Ontario quick self-assessment page</a>
 
 </font>
 </div>
