--- a/app/views/static_pages/_desktop_lookup.html.erb
+++ b/app/views/static_pages/_desktop_lookup.html.erb
@@ -8,7 +8,7 @@
 <div class="card-body">
 <div class="row">
   <div class="col-md-4">
-    <img src="/images/on_32_tr.png"><b> Your Ontario Health Card#</b>
+  <img src="/images/on_32_tr.png" width=32><b> Your Ontario Health Card#</b>
   <div class="input-group">
     <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
     <%= f.input :ohip_num, label: false, placeholder: 'XXXXXXXXXXX AA' %>
@@ -24,13 +24,17 @@
   <div style="width:100px; display:none" id="login_button">
   <%= button_to 'Log In', new_user_session_path, class:"btn btn-primary", method: 'get' %>
   </div>
-
   </div>
-  <div class="col-md-4 pt-3">
+
+  <div class="col-md-4 pt-3 ml-3">
     <div class="text-muted" style="font-size: 1.1em;">
       <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
       If you have been to our clinic we will look up your patient profile and your visit history. Once registered, you will have access to your record and will be able to book a visit.
     </div>
+  </div>
+  
+  <div class="col-md-1 pt-4 ml-3">
+    <img src="/images/card.jpg" width=100>
   </div>
 </div>
 
