--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -1,12 +1,19 @@
 <% provide(:title, 'Welcome') %>
 
+
 <div class="row">  
   <div class="col-md-5">
-    <img src='/images/clinic.jpg' width="490" style="margin-left: 20px"</img>
+    <img src='/images/clinic.jpg' width="490" style="margin-left: 18px"</img>
+
     <div id="address" class="pt-3">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (905) 561-9255 </div>
+
+    <div class="ml-3 pt-3">
+  <%= Schedule.doc_on_duty %>
+    </div>
+
     <div class="p-3">
-      During off hours please or to renew your prescription <%= link_to "request callback from doctor", new_user_session_path %>. In case of any registration problems, please
-      <a href="mailto:dosta@me.com?subject=Patient Inquiry">send me an email</a> or use chat button bottom right.
+      You can set up your vistual visit or request prescription renewal even when the clinic is closed : <%= link_to "request callback from doctor", new_user_session_path %>. In case of any registration problems, please
+      <a href="mailto:dosta@me.com?subject=Patient Inquiry">send an email</a> or use chat button bottom right.
     </div>
 
     <p>
@@ -22,10 +29,13 @@
   </div>
   </div>
 
+
 <div class="col-md-7">
   <div class="hdr-text">We are now open every Day!  <img src="/images/leaf.png" width=45 valign=top> </div> 
-  <div class='pt-5'></div>
 <font size=3>
+  <div class="pull-right"> 24/7 Virtual Visits </div>
+  <div class='pt-5'></div>
+
   <p><font size=6>O</font>ur clinic is open 7 days a week. Please check current schedule below. Please register online and doctor will call you back. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. </p> 
   <div class="pt-3"></div>
   <p> <font size=6>P</font>rescriptions can now be renewed over the phone. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Please register below and request callback from doctor, or click button below if you are already registered. TB and Driving tests are available. </p>
