--- a/app/views/static_pages/_footer_icons.html.erb
+++ b/app/views/static_pages/_footer_icons.html.erb
@@ -16,6 +16,11 @@
 <div class="col-md-1 col-xs-3">
   <i class="glyphicon glyphicon-ok" style="font-size:30px;"></i><br><small>OHIP covered</small>
 </div>
+<% if device_is_desktop? %>
+<div class="col-md-1 col-xs-3">
+  <i class="glyphicon glyphicon-refresh" style="font-size:30px;"></i><br><small>Round The Clock Virtual Visits</small>
+</div>
+<% end %>
 </div>
 
 
