--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,12 +3,16 @@
 <% else %>
 <nav class="navbar navbar-expand-lg navbar-light">
   <ul class="nav navbar-nav navbar-left">
-    <li class="nav-item"><%= link_to "Stoney Creek Medical Walk-In Clinic", root_path, id: "logo" %></li>
+    <% img = '<img src="/images/leaf.png" width=25>' %> 
+    <li class="nav-item">
+      <%= link_to "#{img} Stoney Creek Medical Walk-In Clinic".html_safe, root_path, id: "logo" %></li>
   </ul>
   <% if device_is_desktop? %>
   <ul class="nav navbar-nav navbar-right">
     <li class="login_link"><%= link_to "<i class='glyphicon glyphicon-log-in'></i> Login".html_safe, new_user_session_path %></li>
   </ul>
+<% else %>
+  <div class="ml-2">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 <br> (905) 561-9255 </div>
 <% end %>
 </nav>
 <% end %>
