--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -31,16 +31,16 @@
 
 
 <div class="col-md-7">
-  <div class="hdr-text">We are now open every Day!  <img src="/images/leaf.png" width=45 valign=top> </div> 
+  <div class="hdr-text">We are open every Day! </div> 
 <font size=3>
-  <div class="pull-right"> 24/7 Virtual Visits </div>
+  <div class="pull-right"> <i class='glyphicon glyphicon-time'></i><i> 24/7 Virtual Visits</i> </div>
   <div class='pt-5'></div>
 
   <p><font size=6>O</font>ur clinic is open 7 days a week. Please check current schedule below. Please register online and doctor will call you back. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. </p> 
   <div class="pt-3"></div>
-  <p> <font size=6>P</font>rescriptions can now be renewed over the phone. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Please register below and request callback from doctor, or click button below if you are already registered. TB and Driving tests are available. </p>
+  <p> <font size=6>P</font>rescriptions can now be renewed over the phone. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Please register below and request callback from doctor, or click button below if you are already registered. TB and Driving tests are available. The cost is $25 for TB and $120 for driving exam. </p>
 
-<div class="pt-3">
+<div class="pt-2">
   <%= render "#{device_type}_lookup" %>
 </div>
 
