--- a/app/views/static_pages/_desktop_lookup.html.erb
+++ b/app/views/static_pages/_desktop_lookup.html.erb
@@ -3,7 +3,6 @@
   <%= f.error_notification %>
 
 <small>
-<h5 class='card-title ml-2'>Patient Lookup</h5>
 <div class="card bg-light mb-3">
 <div class="card-body">
 <div class="row">
@@ -33,7 +32,7 @@
     </div>
   </div>
   
-  <div class="col-md-1 pt-4 ml-3">
+  <div class="col-md-1 pt-4 mr-1">
     <img src="/images/card.jpg" width=100>
   </div>
 </div>
