front page mods

--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -38,7 +38,7 @@
 
   <p><font size=6>O</font>ur clinic is open 7 days a week. Please check current schedule below. Please register online and doctor will call you back. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. </p> 
   <div class="pt-3"></div>
-  <p> <font size=6>P</font>rescriptions can now be renewed over the phone. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Please register below and request callback from doctor, or click button below if you are already registered. TB and Driving tests are available. The cost is $25 for TB and $120 for driving exam. </p>
+  <p> <font size=6>P</font>rescriptions can now be renewed over the phone with online registration. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Please register below and request callback from doctor, or click button below if you are already registered. 2 step TB tests and Driving Physical Exam are available at $50 and $120. We do not renew prescriptions for narcotics and controlled medications. </p>
 
 <div class="pt-2">
   <%= render "#{device_type}_lookup" %>
@@ -56,7 +56,7 @@
 
 <div class="pt-5"><i class="glyphicon glyphicon-exclamation-sign mr-2"></i><b>If you have COVID-19 symptoms, please do not come to the clinic. Register online or call the numbers provided. </b></div> 
 
-<div class="pt-5"> Starting July 17 all visiting patients are required to wear a mask </div>
+<div class="pt-5"> All visiting patients are required to wear a mask </div>
 
 </div>
 </div>
