mobile front page

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,7 +12,8 @@
     <li class="login_link"><%= link_to "<i class='glyphicon glyphicon-log-in'></i> Login".html_safe, new_user_session_path %></li>
   </ul>
 <% else %>
-  <div class="ml-2">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 <br> (905) 561-9255 </div>
+  <p>
+  <div class="ml-2 pull-right">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 <br> (905) 561-9255 </div>
 <% end %>
 </nav>
 <% end %>
