--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -1,42 +1,36 @@
 <% provide(:title, 'Welcome') %>
 
-  <div class="hdr-text"> <i class='glyphicon glyphicon-time'></i> 24/7 Virtual Visits!</div>
-  <div class='pt-4'></div>
-<font size=3>
-  <p><font size=6>C</font>linic is now open 7 days a week. Schedule is shown below.  Please register for callback to save time. During callback, doctor will decide if you need to come to the clinic. Registered patients are given priority.</p>
-
-  <div class="pt-3"></div>
-  <p> <font size=6>P</font>rescriptions can be renewed over the phone. You can pick them up at the pharmacy of your choice. </p>
+<font size=4>
+  <div class="hdr-text "><center> <i class='glyphicon glyphicon-time'></i> 24/7 Online Registration</center></div>
+  
+  <div class="row pt-5">
+    <div class="col-md-4 col-md-offset-4">
+  <ul>
+  <li> 100% OHIP covered </li>
+  <li> Fast doctor callbacks </li>
+  <li> Prescription renewals over the phone </li>
+  </ul>
+    </div>
+  </div>
 
   <%= render "#{device_type}_lookup" %>
 
-<p> Already registered? Just click the button below to book an appointment. Doctor on duty will call you back. </p>
+  <div class="pt-3"><center> Already registered? Please log in below. </center></div>
 
 <div align="center" class="pt-4">
-<%= link_to 'Request Doctor Callback', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
-
-<div class="pt-4">
-  <i>
-    Patients with online appointments for visits at the clinic  <u>will be given priority</u>
-  </i>
-</div>
+<%= link_to 'Request Doctor Callback', new_user_session_path, class: "btn btn-primary btn-lg" %></div>
 
 <h2> (905) 561-9255 </h2>
-
-<div class="pt-1"><i class="glyphicon glyphicon-exclamation-sign mr-2"></i><b>If you have COVID-19 symptoms, please do not come to the clinic. Register online or call the numbers provided. </b></div> 
-<p class="pt-3">Don’t have a health card? We still can help. Please call the clinic directly during business hours. </p>
 
     <div class="ml-3 pt-3">
   <%= Schedule.doc_on_duty %>
     </div>
 
-  <p>
-    <div class="panel panel-info pt-3 news-panel-body">
+    <div class="pt-3"></div>
+    <div class="panel panel-info news-panel-body">
       <div class="panel-body "><p align="justify"> 
-       This is current schedule. Please <%= link_to "book your appointment online", new_user_session_path %> or call the clinic  during business hours: <b> (905) 561-9255 </b>.
-       For telemedicine visits, our goal is to call you back within an hour of your online request if it was made between 8am and 8pm.
+       Our goal is to call you back within an hour of your request, if made between 8am and 8pm.
   <%= render "schedules/full_schedule" %>
-        </p>
     </div>
   </div>
 </font>
