--- a/app/views/static_pages/_mobile_lookup.html.erb
+++ b/app/views/static_pages/_mobile_lookup.html.erb
@@ -4,10 +4,10 @@
 <div class="pt-3"></div>
 <div class="row">
 <div class="card card-info col-md-5 col-md-offset-4 bg-success" >
-  <img class="card-img-top" src="/images/card.jpg">
+  <img class="card-img-top" src="/images/card.jpg" style="height:150px">
 <div class="card-body">
 
-  <%= f.input :ohip_num, label: false, placeholder: 'XXXXXXXXXXX AA', input_html: {style: "height: 45px !important; font-size: 1.4em; font-weight:bold; "} %>
+  <%= f.input :ohip_num, label: false, placeholder: 'XXXXXXXXXXX AA', hint: "Your healthcard number", input_html: {style: "height: 45px !important; font-size: 1.4em; font-weight:bold; "} %>
 
   <div style="display:none" id="register_button">
   <%= button_to 'Register', patients_lookup_path, class:"btn btn-primary", method: 'get' %>
